--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
     }
     </script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <link rel="stylesheet" href="/index.css">
-</head>
+  </head>
   <body class="bg-gray-100 dark:bg-gray-800">
     <div id="root"></div>
-    <script type="text/babel" data-type="module" src="/index.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <script type="text/babel" data-type="module" src="index.tsx"></script>
+  </body>
 </html>
